2007/07/10  Phil Christensen <phil@bubblehouse.org>
    * Added $options->{'error_handler'} hook
    * Added $options->{'usage_fh'} hook
    * Added documentation on error_handler
    * Added documentation on usage_fh
    * Fixed documentation bugs
    * Other small bugfixes

2007/07/08  Phil Christensen <phil@bubblehouse.org>
    * Added changelog
    * Added example.pl
    * Started using Module::Build instead of ExtUtils::MakeMaker
    * Added unit tests, pod tests, and pod coverage tests
    * Modified POD documentation to be inline instead of appended
    * Updated README with new POD text
    * Updated MANIFEST for new files
    * Implemented support for flag grouping