@@ -1,3 +1,3 @@
 use Test::Unit::HarnessUnit;
 my $r = Test::Unit::HarnessUnit->new();
-$r->start('TestOptions');
+$r->start('Options::Test');
